2009-01-21  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (medianVisible): New field,
    (meanVisible): Likewise,
    (BoxAndWhiskerRenderer): Initialise new fields,
    (isMeanVisible): New method,
    (setMeanVisible): Likewise,
    (isMedianVisible): New method,
    (setMedianVisible): Likewise,
    (drawHorizontalItem): Updated to check new flags,
    (drawVerticalItem): Likewise,
    (equals): Updated to check new fields,
    * tests/org/jfree/chart/renderer/category/junit/BoxAndWhiskerRendererTests.java
    (testEquals): Check new fields.

2009-01-21  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
    (drawRangeLine): New method,
    * source/org/jfree/chart/plot/CategoryPlot.java
    (rangeZeroBaselineVisible): New field,
    (rangeZeroBaselineStroke): Likewise,
    (rangeZeroBaselinePaint): Likewise,
    (rangeMinorGridlinesVisible): Likewise,
    (rangeMinorGridlineStroke): Likewise,
    (rangeMinorGridlinePaint): Likewise,
    (CategoryPlot): Initialise new fields and removed baseline marker,
    (isRangeZeroBaselineVisible): New method,
    (setRangeZeroBaselineVisible): Likewise,
    (getRangeZeroBaselineStroke): Likewise,
    (setRangeZeroBaselineStroke): Likewise,
    (getRangeZeroBaselinePaint): Likewise,
    (setRangeZeroBaselinePaint): Likewise,
    (isRangeMinorGridlinesVisible): Likewise,
    (setRangeMinorGridlinesVisible): Likewise,
    (getRangeMinorGridlineStroke): Likewise,
    (setRangeMinorGridlineStroke): Likewise,
    (getRangeMinorGridlinePaint): Likewise,
    (setRangeMinorGridlinePaint): Likewise,
    (draw): Add code to draw new zero range baseline,
    (drawRangeGridlines): Account for minor gridlines,
    (drawZeroRangeBaseline): New method,
    (equals): Updated for new fields,
    (writeObject): Likewise,
    (readObject): Likewise,