@@ -1,3 +1,9 @@
+2009-01-23  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/renderer/category/LevelRenderer.java
+    (LevelRenderer): Set default legend shape,
+    (hashCode): New method.
+
 2009-01-21  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
